Changelog for GoodNews

GoodNews 1.3.3-pl (2014-11-14)
--------------------------------------------------
- when updating the subscription profile: update form fields with new values when reloadOnSuccess = false
- [#29] Frontend: groups checkboxes output is falsely rendered inside html form fieldset for each single group
- [#28] Frontend: Subscription snippet - crashes during validation if email field is empty
- improved username creation in Subscriber Importer (we now use the userid part of the email address)


GoodNews 1.3.2-pl (2014-11-01)
--------------------------------------------------
- [#27] Subscriber meta data not created for existing MODX users when using the "Import Update Feature"
- [#26] Editing a GoodNews Container - mailing templates category dropdown doesn't list all Categories
- small lexicon adjustments to better match MODX 2.3


GoodNews 1.3.1-pl (2014-10-28)
--------------------------------------------------
- [#25] Extend Subscriber Importer to enable "Update" of existing subscribers
- fixed a bug in Import console window (console window is now destroyed after closing)
- fixed a bug in German lexicon file (missing semicolon could lead to white page -> sorry for this!)
- GoodNews management interface now takes account of MODX manager date and time format settings
- deleted mailing editor users are now recognized and it's id is now shown instead empty string


GoodNews 1.3.0-pl (2014-10-13)
--------------------------------------------------
- [#15] new feature: Content collector


GoodNews 1.2.2-pl (2014-09-15)
--------------------------------------------------
- some small cosmetical changes in forms


GoodNews 1.2.1-pl (2014-09-14)
--------------------------------------------------
- adapted searchfilter fields + reset buttons above grids to match MODX 2.3 style
- added debug-mode status to System Checks table
- [#24] fixed rendering of grids in tab panels (resizing problem)
- fixed some PHP warnings in getgroupcatnodes.class.php