@@ -2,6 +2,7 @@ Changelog for GoodNews
 
 GoodNews 1.3.3-pl (2014-11-14)
 --------------------------------------------------
+- fixed a few PHP warnings in goodnewssubscriptioncontroller.class.php
 - when updating the subscription profile: update form fields with new values when reloadOnSuccess = false
 - [#29] Frontend: groups checkboxes output is falsely rendered inside html form fieldset for each single group
 - [#28] Frontend: Subscription snippet - crashes during validation if email field is empty
